# motivational-speech-synthesis

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  google_colab.ipynb  inference_example.ipynb  main.py  motivationalTTS.py  pyproject.toml  requirements.txt
average-speaker-embeddings/: motivational-factor-0.10.pt  motivational-factor-0.15.pt  motivational-factor-0.20.pt  motivational-factor-0.30.pt  motivational-factor-0.50.pt  motivational-factor-0.65.pt  motivational-factor-0.75.pt  motivational-factor-0.90.pt
average-speaker-embeddings/average-speaker-embeddings_400/: motivational-factor-0.00.pt  motivational-factor-0.05.pt  motivational-factor-0.25.pt  motivational-factor-0.35.pt  motivational-factor-0.40.pt  motivational-factor-0.45.pt  motivational-factor-0.55.pt  motivational-factor-0.60.pt  motivational-factor-0.70.pt  motivational-factor-0.80.pt  motivational-factor-0.85.pt  motivational-factor-0.95.pt  motivational-factor-1.00.pt
average-speaker-embeddings/knn=1000_avg_embeddings/: motivational-factor-0.00.pt  motivational-factor-0.05.pt  motivational-factor-0.10.pt  motivational-factor-0.15.pt  motivational-factor-0.20.pt  motivational-factor-0.25.pt  motivational-factor-0.30.pt  motivational-factor-0.35.pt  motivational-factor-0.40.pt  motivational-factor-0.45.pt  motivational-factor-0.50.pt  motivational-factor-0.55.pt  motivational-factor-0.60.pt  motivational-factor-0.65.pt  motivational-factor-0.70.pt  motivational-factor-0.75.pt  motivational-factor-0.80.pt  motivational-factor-0.85.pt  motivational-factor-0.90.pt  motivational-factor-0.95.pt  (+1 more)
(+251 files in other folders)
