[project]
name = "motivationaltts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audiocraft>=1.1.0",
    "deepfilternet>=0.5.6",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.29.3",
    "librosa>=0.11.0",
    "ninja>=1.11.1.4",
    "numpy<1.25",
    "pydantic==1.10.10",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "tiktoken==0.5.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.33.1",
    "tyro>=0.9.18",
    "uvicorn>=0.34.0",
]
