[project]
name = "motivationaltts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate==1.2.1",
    "audiocraft>=1.1.0",
    "deepfilternet>=0.5.6",
    "fastapi>=0.115.12",
    "huggingface-hub==0.27.0",
    "librosa>=0.11.0",
    "ninja>=1.11.1.4",
    "numpy>=1.26.4",
    "pydantic==1.10.10",
    "pydub>=0.25.1",
    "safetensors==0.5.0",
    "soundfile>=0.13.1",
    "tiktoken==0.5.1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "transformers==4.47.1",
    "tyro>=0.9.18",
    "uvicorn>=0.34.0",
]
